--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="img/logo/favicon.ico" type="image/x-icon">
     <!--  Normalize  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
+    <!--  Fontawesome  -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <!-- Style -->
     <link rel="stylesheet" href="css/main.css">
     <title>Treehouse home</title>
@@ -71,7 +73,7 @@
                 <div class="service-item">
                     <div class="service-icon"><img src="img/icons/icon-heart.png" alt="Heart"></div>
                     <!-- /.service-icon -->
-                    <div class="service-header">beautiful designs</div>
+                    <div class="heading-3">beautiful designs</div>
                     <!-- /.heading-4 -->
                     <p class="service-text">Proin iaculis purus consequat sem cure 
                     digni ssim. Donec porttitora entum suscipit 
@@ -85,7 +87,7 @@
                 <div class="service-item">
                     <div class="service-icon"><img src="img/icons/icon-mobile.png" alt="Heart"></div>
                     <!-- /.service-icon -->
-                    <div class="service-header">responsive web</div>
+                    <div class="heading-3">responsive web</div>
                     <!-- /.heading-4 -->
                     <p class="service-text">Proin iaculis purus consequat sem cure 
                     digni ssim. Donec porttitora entum suscipit 
@@ -99,7 +101,7 @@
                 <div class="service-item">
                     <div class="service-icon"><img src="img/icons/icon-graph.png" alt="Heart"></div>
                     <!-- /.service-icon -->
-                    <div class="service-header">Marketing tools</div>
+                    <div class="heading-3">Marketing tools</div>
                     <!-- /.heading-4 -->
                     <p class="service-text">Proin iaculis purus consequat sem cure 
                     digni ssim. Donec porttitora entum suscipit 
@@ -138,6 +140,61 @@
     <!-- /.just-relax -->
     <!-- Just relax end -->   
 
+    <!-- Latest project end -->
+    <div class="container-fluid container-padding">
+        <div class="heading-block">
+            <h2 class="heading-2">latest project</h2>
+            <!-- /.heading-2 -->
+            <p class="subtitle">Proin iaculis purus consequat sem cure </p>
+            <!-- /.subtitle -->
+        </div>
+        <!-- /.heading-block -->
+        <div class="latest-project">
+            <div class="latest-project-content">
+                <div class="heading-3">Developing a framework</div>
+                <!-- /.heading-3 -->
+                <p class="latest-project-text">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
+                <!-- /.latest-project-text -->
+                <ul class="latest-project-list">
+                    <li class="latest-project-features">
+                        <img src="img/icons/icon-basket.png" alt="Корзина">
+                        <div class="heading-3">E-Commerce Ready</div>
+                        <!-- /.heading-3 -->
+                        <div class="latest-project-text">Proin iaculis purus consequat sem cure  digni ssim. </div>
+                        <!-- /.latest-project-text -->
+                    </li>
+                    <!-- /.latest-project-features -->
+                    <li class="latest-project-features">
+                        <img src="img/icons/icon-laptop.png" alt="Ноутбук">
+                        <div class="heading-3">Powerful SEO Features</div>
+                        <!-- /.heading-3 -->
+                        <div class="latest-project-text">Proin iaculis purus consequat sem cure  digni ssim. </div>
+                        <!-- /.latest-project-text -->
+                    </li>
+                    <!-- /.latest-project-features -->
+                    <li class="latest-project-features">
+                        <img src="img/icons/icon-locked.png" alt="Замок">
+                        <div class="heading-3">Secure Encryption</div>
+                        <!-- /.heading-3 -->
+                        <div class="latest-project-text">Proin iaculis purus consequat sem cure  digni ssim. </div>
+                        <!-- /.latest-project-text -->
+                    </li>
+                    <!-- /.latest-project-features -->
+                </ul>
+                <!-- /.latest-project-list -->
+                <p class="latest-project-text">Proin iaculis purus consequat sem cure  digni ssim donec 
+                porttitora entum suscipit  aenean rhoncus posuere odio in.</p>
+                <a href="#">View Details <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <!-- /.latest-project-content -->
+            <div class="latest-project-bg"></div>
+            <!-- /.latest-project-bg -->
+        </div>
+        <!-- /.latest-project -->
+    </div>
+    <!-- /.container container-padding -->
+    <!-- Latest project end -->
+    
     <!-- jQuerry -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- JS -->
