--- a/index.html
+++ b/index.html
@@ -194,6 +194,56 @@
     </div>
     <!-- /.container container-padding -->
     <!-- Latest project end -->
+
+    <!-- Culture & values start -->
+    <div class="container">
+        <div class="heading-block">
+            <h2 class="heading-2">culture & Values</h2>
+            <!-- /.heading-2 -->
+            <p class="subtitle">Proin iaculis purus consequat cure. </p>
+            <!-- /.subtitle -->
+        </div>
+        <!-- /.heading-block -->
+        <div class="row relative">
+            <div class="col-1-of-3 text-center">
+                <div class="cv-icon">
+                    <img src="img/icons/icon-music.png" alt="">
+                </div>
+                <!-- /.cv-icon -->
+                <div class="heading-3">Work-Life Balance</div>
+                <!-- /.heading-3 -->
+                <div class="cv-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</div>
+                <!-- /.cv-text -->
+            </div>
+            <!-- /.col-4 -->
+            <div class="col-1-of-3 text-center">
+                <div class="cv-icon">
+                    <img src="img/icons/icon-graph-circle.png" alt="">
+                </div>
+                <!-- /.cv-icon -->
+                <div class="heading-3">Quality Over Quantity</div>
+                <!-- /.heading-3 -->
+                <div class="cv-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</div>
+                <!-- /.cv-text -->
+            </div>
+            <!-- /.col-4 -->
+            <div class="col-1-of-3 text-center">
+                <div class="cv-icon">
+                    <img src="img/icons/icon-star.png" alt="">
+                </div>
+                <!-- /.cv-icon -->
+                <div class="heading-3">Deliver Excellence</div>
+                <!-- /.heading-3 -->
+                <div class="cv-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</div>
+                <!-- /.cv-text -->
+            </div>
+            <!-- /.col-4 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+    <!-- Culture & values end -->
+    
     
     <!-- jQuerry -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
