contact+partners+footer+social

--- a/index.html
+++ b/index.html
@@ -290,7 +290,122 @@
     </div>
     <!-- /.container -->
     <!-- Our awesome clients end -->
+
+    <!-- Contact start -->
+    <div class="contact container-fluid text-center">
+        <h2 class="heading-2">ready to talk about your next project?</h2>
+        <!-- /.heading-2 -->
+        <a href="#" class="btn">Contact us</a>
+    </div>
+    <!-- /.contact container-fluid text-center -->
+    <!-- Contact end -->
     
+    <!-- Partners start -->
+    <div class="partners container text-center">
+        <a href="#"><img src="img/logo/contact-envato.png" alt=""></a> 
+        <a href="#"><img src="img/logo/contact-wordpress.png" alt=""></a> 
+        <a href="#"><img src="img/logo/contact-tuts.png" alt=""></a> 
+        <a href="#"><img src="img/logo/contact-microlancer.png" alt=""></a> 
+    </div>
+    <!-- /.partners container text-center -->
+    <!-- Partners end -->
+
+    <!-- Footer start -->
+    <div class="container-fluid bg-black">
+        <div class="footer container">
+            <div class="row">
+                <div class="col-1-of-3">
+                    <div class="heading-3">Contact Us</div>
+                    <!-- /.heading-3 -->
+                    <ul>
+                        <li>
+                            <img src="img/icons/icon-location.png" alt="">
+                            <span>55 Main St.Toronto, ONM1H 3A5</span>
+                        </li>
+                        <li>
+                            <i><img src="img/icons/icon-iphone.png" alt=""></i>
+                            <span>(416) 555-5252</span>
+                        </li>
+                        <li>
+                            <i><img src="img/icons/icon-email.png" alt=""></i>
+                            <span>hello@treehouse.com</span>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.col-1-of-3 -->
+                <div class="col-1-of-3">
+                    <div class="heading-3">Latest Posts</div>
+                    <!-- /.heading-3 -->
+                    <ul>
+                        <li>
+                            <img src="img/icons/icon-news.png" alt="">
+                            <span>Made With Love In Toronto</span>
+                        </li>
+                        <li>
+                            <i><img src="img/icons/photo-icon.png" alt=""></i>
+                            <span>Startup News & Emerging Tech</span>
+                        </li>
+                        <li>
+                            <img src="img/icons/icon-news.png" alt="">
+                            <span>Bitcoin Will Soon Rule The World</span>
+                        </li>
+                        <li>
+                            <img src="img/icons/icon-news.png" alt="">
+                            <span>Wearable Technology On The Rise</span>
+                        </li>
+                        <li>
+                            <i><img src="img/icons/icon-media.png" alt=""></i>
+                            <span>Learn Web Design In 30 Days!</span>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.col-1-of-3 -->
+                <div class="col-1-of-3">
+                    <div class="heading-3">Latest Tweets</div>
+                    <!-- /.heading-3 -->
+                    <ul>
+                        <li>
+                            <img src="img/icons/icon-twitter.png" alt="">
+                            <div class="footer-content">
+                                <span>Confucius: Life is really simple, but we insist on making it complicated. </span>
+                                <span class="footer-sharp">#famousquotes</span>
+                                <span class="footer-time">8 mins ago</span>
+                            </div>
+                            <!-- /.footer-content -->
+                        </li>
+                        <li>
+                            <i><img src="img/icons/icon-twitter.png" alt=""></i>
+                            <div class="footer-content">
+                                <span class="footer-text">Grab the Free Treehouse web template at FreebiesXpress!</span>
+                                <span class="footer-sharp">#freebies #templates</span>
+                                <span class="footer-time">2 days ago</span>
+                            </div>
+                            <!-- /.footer-content -->
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.col-1-of-3 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.footer container -->
+    </div>
+    <!-- /.container-fluid text-center -->
+    <!-- Footer end -->
+
+    <!-- Social start -->
+    <div class="social container">
+        <span>© Copyright 2014 FreebiesXpress.com</span>
+        <ul>
+            <li><a href="#"><img src="img/icons/icon-twitter-circle.png" alt=""></a></li>
+            <li><a href="#"><img src="img/icons/icon-facebook-circle.png" alt=""></a></li>
+            <li><a href="#"><img src="img/icons/icon-pinterest-circle.png" alt=""></a></li>
+            <li><a href="#"><img src="img/icons/icon-google-circle.png" alt=""></a></li>
+        </ul>
+    </div>
+    <!-- /.container -->
+    <!-- Social end -->  
+
     <!-- jQuerry -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- JS -->
