--- a/index.html
+++ b/index.html
@@ -323,11 +323,11 @@
                             <span>55 Main St.Toronto, ONM1H 3A5</span>
                         </li>
                         <li>
-                            <i><img src="img/icons/icon-iphone.png" alt=""></i>
+                            <img src="img/icons/icon-iphone.png" alt="">
                             <span>(416) 555-5252</span>
                         </li>
                         <li>
-                            <i><img src="img/icons/icon-email.png" alt=""></i>
+                            <img src="img/icons/icon-email.png" alt="">
                             <span>hello@treehouse.com</span>
                         </li>
                     </ul>
@@ -342,7 +342,7 @@
                             <span>Made With Love In Toronto</span>
                         </li>
                         <li>
-                            <i><img src="img/icons/photo-icon.png" alt=""></i>
+                            <img src="img/icons/photo-icon.png" alt="">
                             <span>Startup News & Emerging Tech</span>
                         </li>
                         <li>
@@ -354,7 +354,7 @@
                             <span>Wearable Technology On The Rise</span>
                         </li>
                         <li>
-                            <i><img src="img/icons/icon-media.png" alt=""></i>
+                            <img src="img/icons/icon-media.png" alt="">
                             <span>Learn Web Design In 30 Days!</span>
                         </li>
                     </ul>
@@ -374,7 +374,7 @@
                             <!-- /.footer-content -->
                         </li>
                         <li>
-                            <i><img src="img/icons/icon-twitter.png" alt=""></i>
+                            <img src="img/icons/icon-twitter.png" alt="">
                             <div class="footer-content">
                                 <span class="footer-text">Grab the Free Treehouse web template at FreebiesXpress!</span>
                                 <span class="footer-sharp">#freebies #templates</span>
@@ -397,10 +397,10 @@
     <div class="social container">
         <span>© Copyright 2014 FreebiesXpress.com</span>
         <ul>
-            <li><a href="#"><img src="img/icons/icon-twitter-circle.png" alt=""></a></li>
-            <li><a href="#"><img src="img/icons/icon-facebook-circle.png" alt=""></a></li>
-            <li><a href="#"><img src="img/icons/icon-pinterest-circle.png" alt=""></a></li>
-            <li><a href="#"><img src="img/icons/icon-google-circle.png" alt=""></a></li>
+            <li><a href="#" class="icon-circle text-center"><img src="img/icons/icon-twitter.png" alt=""></a></li>
+            <li><a href="#" class="icon-circle text-center"><img src="img/icons/icon-facebook-circle.png" alt=""></a></li>
+            <li><a href="#" class="icon-circle text-center"><img src="img/icons/icon-pinterest-circle.png" alt=""></a></li>
+            <li><a href="#" class="icon-circle text-center"><img src="img/icons/icon-google-circle.png" alt=""></a></li>
         </ul>
     </div>
     <!-- /.container -->
