--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <!-- Just relax end -->   
 
     <!-- Latest project end -->
-    <div class="container-fluid container-padding">
+    <div class="late_project container-fluid container-padding">
         <div class="heading-block">
             <h2 class="heading-2">latest project</h2>
             <!-- /.heading-2 -->
@@ -196,7 +196,7 @@
     <!-- Latest project end -->
 
     <!-- Culture & values start -->
-    <div class="container-fluid container-padding bg-grey">
+    <div class="culture container-fluid container-padding bg-grey">
         <div class="container">
             <div class="heading-block">
                 <h2 class="heading-2">culture & Values</h2>
@@ -249,7 +249,7 @@
     <!-- Culture & values end -->
     
     <!-- Our awesome clients start -->
-    <div class="container container-padding">
+    <div class="reviews-container container container-padding">
         <div class="heading-block">
             <h2 class="heading-2">our awesome clients</h2>
             <!-- /.heading-2 -->
